# StrongholdLegendsTextHook

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: release-build.yml
src/: hook.cpp  hook.h  main.cpp
